# sudoku-bktrk

./: Cargo.toml  README.md
benches/: rect_gen_benchmark.rs
src/: board.rs  constants.rs  lib.rs  util.rs
