[package]
name = "bktrk"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
proptest = "1.0.0"
proptest-derive = "0.3.0"
serde_json = "1.0.81"

[[bench]]
harness = false
name = "rect_gen_benchmark"

[dependencies]
derive_more = "0.99.17"
itertools = "0.10.3"
serde = { version = "1.0.137", features = ["derive"] }
